// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<MaskedInput
  autoComplete="off"
  mask={
    Array [
      /\\\\d/,
      /\\\\d/,
      "/",
      /\\\\d/,
      /\\\\d/,
      "/",
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
    ]
  }
  onChange={[Function]}
  pipe={[Function]}
  placeholder="dd/mm/yyyy"
/>
`;

exports[`should render correctly 2`] = `
<MaskedInput
  autoComplete="off"
  mask={
    Array [
      /\\\\d/,
      /\\\\d/,
      "/",
      /\\\\d/,
      /\\\\d/,
      "/",
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
      /\\\\d/,
    ]
  }
  onChange={[Function]}
  pipe={[Function]}
  placeholder="dd/mm/yyyy"
  value="30/10/2018"
/>
`;
